--- a/package.json
+++ b/package.json
@@ -3,45 +3,88 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "ngrok": "ngrok http 3000"
   },
+  "type": "module",
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/material": "^6.1.4",
     "@prisma/client": "^5.17.0",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@react-pdf/renderer": "^4.0.0",
+    "@tanstack/react-table": "^8.20.5",
+    "@types/mapbox-gl": "^3.4.0",
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.2.0",
+    "framer-motion": "^11.5.4",
+    "html2canvas": "^1.4.1",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.412.0",
-    "next": "14.2.5",
-    "next-auth": "^4.24.7",
-    "react": "^18",
+    "mapbox-gl": "^3.7.0",
+    "next": "^14.2.18",
+    "next-auth": "^4.24.10",
+    "next-cloudinary": "^6.16.0",
+    "nodemailer": "^6.9.16",
+    "react": "^18.3.1",
     "react-day-picker": "^9.0.8",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.52.1",
+    "react-scroll-parallax": "^3.4.5",
+    "recharts": "^2.13.3",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "uuid": "^10.0.0",
+    "vaul": "^0.9.1",
+    "ws": "^8.18.0",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.26.0",
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "^16.0.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.14.11",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/nodemailer": "^6.4.16",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/uuid": "^10.0.0",
+    "@types/ws": "^8.5.13",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint-config-next": "15.0.3",
+    "jest": "^29.7.0",
+    "ngrok": "^5.0.0-beta.2",
     "postcss": "^8",
     "prisma": "^5.17.0",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   },
@@ -49,5 +92,9 @@
   "main": "index.js",
   "keywords": [],
   "author": "Marwyn",
-  "license": "ISC"
+  "license": "ISC",
+  "overrides": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+  }
 }
